# thr-stack-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  package-lock.json  package.json  push.sh  tailwind.config.js
assets/: output.css
src/: main.rs  mod.rs
src/controllers/: auth.rs  mod.rs  user_controller.rs
src/libs/: db.rs  mod.rs
src/models/: user.rs
src/routes/: mod.rs  router.rs
src/templates/: login_template.rs  mod.rs
templates/: base.html  login.html
