[package]
name="my-rhat-app"
edition="2021"
publish=false

[dependencies]
askama = "0.12.1"
axum = "0.6"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
htmx = "0.1.0"
dotenv = "0.15.0"
tower-http = {version = "0.4", features = ["fs"]}
tower = "0.5.2"
base64 = "0.22.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
